fix: double scroll bar on small screen

--- a/src/style.css
+++ b/src/style.css
@@ -34,6 +34,15 @@ body {
   .menu-panel {
     flex-grow: 1;
   }
+
+  .menu-panel,
+  .content {
+    overflow: unset;
+  }
+
+  .category-menu-wrapper {
+    overflow: auto;
+  }
 }
 
 /* --- menu for link category selection --- */
